# solana-trader-proto

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  go.mod  go.sum  swagger-ui
api/: api.pb.go  api.pb.gw.go  api_grpc.pb.go
common/: common.pb.go
drift/: drift.pb.go
js/ffi/proto/: api_pb.d.ts  (+11 more)
mev-protos-go/: auth.pb.go  auth_grpc.pb.go  block.pb.go  block_engine.pb.go  block_engine_grpc.pb.go  bundle.pb.go  packet.pb.go  relayer.pb.go  relayer_grpc.pb.go  searcher.pb.go  searcher_grpc.pb.go  shared.pb.go  shredstream.pb.go  shredstream_grpc.pb.go  trace_shred.pb.go
mev-protos-go/auth/: auth.pb.go  auth_grpc.pb.go
mev-protos-go/block/: block.pb.go
mev-protos-go/block_engine/: block_engine.pb.go  block_engine_grpc.pb.go
mev-protos-go/bundle/: bundle.pb.go
mev-protos-go/relayer/: relayer.pb.go  relayer_grpc.pb.go
mev-protos-go/searcher/: searcher.pb.go  searcher_grpc.pb.go
mev-protos-go/shared/: shared.pb.go
mev-protos-go/shredstream/: shredstream.pb.go
proto/: Dockerfile  Dockerfile-go  Dockerfile-js  api.pb.go  api.pb.gw.go  api.proto  common.proto  drift.proto
proto/api/: api.pb.go  api.pb.gw.go  common.pb.go
proto/ffi/: ffi.pb.go  ffi.proto  ffi_grpc.pb.go
proto/mev-protos/: block.proto  block_engine.proto  bundle.proto  packet.proto  relayer.proto  searcher.proto  shredstream.proto  trace_shred.proto
python/: README.md  pyproject.toml  requirements.txt
rust/: Cargo.toml  build.rs
rust/proto/: api.proto
rust/proto/mev-protos/: auth.proto  block.proto  block_engine.proto  shared.proto  shredstream.proto
rust/src/: lib.rs
(+69 files in other folders)
